<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Title for the create event screen -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create a New Event"
            android:fontFamily="@font/bold1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/eventPosterImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Upload Event Poster"
                android:fontFamily="@font/bold1"
                android:scaleType="center"
                android:src="@drawable/place_holder"/>
        </FrameLayout>

        <!-- Input fields -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold1"
                android:maxLength="32"
                android:hint="Event Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDateInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold1"
                android:hint="Event Date"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventStartTimeInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventStartTimeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold1"
                    android:hint="Event Start Time"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventEndTimeInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventEndTimeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold1"
                    android:hint="Event End Time"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDescriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/eventDateInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="@font/bold1"
                android:hint="Event Description"
                android:gravity="top|start"
                android:maxLength="132"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceLimitInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:hint="Attendance Limit (Optional)">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/attendanceLimitEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/checkInOptionGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/checkInLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check-in Locations On"/>

            <RadioButton
                android:id="@+id/noCheckInLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check-in Locations Off"/>
        </RadioGroup>

        <!-- Buttons for QR code generation -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newQrButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Generate QRCode"
                android:textColor="@color/red"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/upload"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Upload Poster"
                android:textColor="@color/red"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintStart_toEndOf="@+id/newQrButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>
