<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <!-- QR Code ImageView -->
    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_launcher_foreground"/>

    <!-- Use Own QR Code Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/useOwnQrButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Use Own QR Code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/qrCodeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.85" />

    <!-- Generate Unique QR Code Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/generateQrCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Generate Unique QR Code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/useOwnQrButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintWidth_percent="0.85" />

    <!-- Generate Promotion QR Code Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/generatePromotionQrCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Generate Promotion QR Code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/generateQrCodeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintWidth_percent="0.85" />

    <!-- Share QR Code Button -->

    <!-- Share QR Code Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareQrCodeButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Share QR Code"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/generatePromotionQrCodeButton"
        app:layout_constraintStart_toStartOf="@id/useOwnQrButton"
        app:layout_constraintEnd_toStartOf="@id/sharePromoQrCodeButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="8dp" />

    <!-- Share Promo QR Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sharePromoQrCodeButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Share Promo QR"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/generatePromotionQrCodeButton"
        app:layout_constraintStart_toEndOf="@id/shareQrCodeButton"
        app:layout_constraintEnd_toEndOf="@id/useOwnQrButton"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <!-- Home Page Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Home Page"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/shareQrCodeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
