...
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:hint="Organizer Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/allEventsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="All Events"
        android:fontFamily="@font/bold1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/allEventsTextView"
        app:layout_constraintBottom_toTopOf="@+id/createNewEventButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createNewEventButton"
...
